# GeneralBank

./: .gitignore  README.md  connect.py  connect_self.py  connect_utils.py  for_cursor.sql  funs.py  hiberfil.py  main.py  utils.py
static/css/: main_css_fail_for_log.css  main_css_file_for_index.css
static/css/components/: account_get_style.css
static/js/: main.js
templates/: README.md  accounts_op.html  amount_error.html  base.html  chat.html  correct.html  error_connection.html  index.html  login.html  login_wrong.html  no_accounts.html  register.html  register_wrong.html  successfully.html  successfully_reg_log.html
templates/consoleapp/: main.py
templates/style/: main_css_fail_for_log.css  main_css_file_for_index.css
templates/style/components/: account_get_style.css
transactions_bank/: Cargo.toml
transactions_bank/src/: build.rs  lib.rs  main.rs
