[package]
name = "transactions_bank"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.26", features = ["bundled"] }
libc = "0.2"

[[bin]]
name = "transactions_bank_bin"
path = "src/main.rs"

[lib]
name = "transactions_bank"  # Удалено "_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"
